2018-03-20 Inge Wortel <ingewortel@gmail.com>
	* src/CPMCanvas.js : small change in creating canvas in line with commit in jtextor
	* src/CPMStats.js : Added functions from jtextor to compute "connectedness" of the cell
	* examples-node/run-2d.js : now logs connectedness to the console.


2018-03-15 Inge Wortel <ingewortel@gmail.com>
	* src/CPM.js (pointAttractor) : small adjustment in pointAttractor
	* src/CPMchemotaxis.js : added new class to extend the CPM with a chemokine gradient.

2018-03-06 Inge Wortel <ingewortel@gmail.com>

	* src/CPM.js : adjusted the computation of X_BITS, Y_BITS, Z_BITS (number of bits was higher than necessary, which limited the possible grid size in 3D too much). Turned off the default generation of a stroma border.

	* src/CPM.js ( addStromaBorder ) : this implementation did not work for 3D (produced stroma lines instead of planes at the grid border, so no real barrier for the cells). Instead, this now uses a new function addStromaPlane.

	* src/CPMCanvas.js : changed the generation of the canvas in the html document so that its size depends on the field size and the wrap option (before, only the drawing of cells was wrapped, but not the canvas itself).


2018-02-28 Inge Wortel <ingewortel@gmail.com>

	* src/CPMStats.js (getCentroids, getCentroidOf, centroids) : replaced separate 2D/3D functions with a single function. getCentroids and centroid now call getCentroidOf internally.

	* src/CPMStats.js (updateOnline, newOnline, cellStats) : new functions to compute mean and variance of pixel coordinates in a given dimension (0,1,2 for x,y,z).

	* src/CPMStats.js (getLengthOf, getRangeOf) : new functions to compute the length of a cell in a given dimension. getLengthOf actually returns the variance (a little more robust); getRangeOf returns the distance between the outer pixels in a given dimension.
